# micro-mp3

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  Kconfig  LICENSE  NOTICE  README.md  idf_component.yml  library.json
.github/workflows/: ci.yml  publish.yml  release-drafter.yml
cmake/: esp-idf.cmake  functions.cmake  host.cmake  sources.cmake
examples/decode_benchmark/: CMakeLists.txt  README.md  partitions_4mb.csv  platformio.ini  sdkconfig.defaults  sdkconfig.defaults.esp32
examples/decode_benchmark/src/: CMakeLists.txt  decode_benchmark.cpp  test_audio_mp3_128k.h  test_audio_mp3_64k.h
host_examples/mp3_to_wav/: CMakeLists.txt  mp3_to_wav.cpp  wav_writer.cpp  wav_writer.h
include/micro_mp3/: mp3_decoder.h
script/: clang-tidy.sh
src/: mp3_decoder.cpp
src/opencore-mp3dec/: CHANGES.md  pvmp3_dec_defs.h  pvmp3_decode_header.cpp  pvmp3_dequantize_sample.cpp  pvmp3_framedecoder.cpp  pvmp3_huffman_parsing.cpp  pvmp3_normalize.cpp  pvmp3_seek_synch.cpp
src/opencore-mp3dec/oscl/: oscl_mem.h
